--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -208,24 +208,152 @@ a:hover {
   opacity: 1;
 }
 
-.modal-control {
+.modal-control {s
   position: absolute;
   bottom: 5%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
+.container  {
+  margin: 0 auto;
+  height: auto;
+  background-color: #00ff80;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.inner  {
+  width: 100%;
+  max-width: 960px;
+  margin: 0 auto;
+  background-color: rgb(191, 255, 234);
+  text-align: center;
+}
+
+.inner img  {
+  max-width: 800px;
+}
+
+.info-img__box  {
+  padding-top: 40px;
+}
+
+.info-title__box  {
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
+.info-text__box  {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+
+
+
+p {
+    text-align: center;
+    font-size: 16px;
+    color: #666;
+    line-height: 2.5;
+    margin: 0;
+}
+ 
+
+/*アコーディオン*/
+#text-wrap {
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: 0 auto;
+}
+.hide-text {
+    display: none;
+}
+ 
+ 
+button.readmore {
+    position: relative;
+    height: 80px;
+    width: 90px;
+    margin: 40px auto;
+    display: block;
+    background-color: transparent;
+    color: #666;
+    padding-bottom: 40px;
+    border: none;
+    outline: 0;
+    transition: .3s;
+    -erbkit-transition: .3s;
+}
+ 
+button.readmore::after {
+    content: "";
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border-top: solid 3px #666;
+    border-right: solid 3px #666;
+    transform: rotate(135deg);
+    -webkit-transform: rotate(135deg);
+    right: 34px;
+    top: 28px;
+    transition: .3s;
+    -erbkit-transition: .3s;
+}
+ 
+button.readmore:hover::after {
+    top: 40px;
+}
+
+ 
+.on-click {
+    color: transparent!important;
+}
+ 
+.on-click {
+    transform: rotate(-180deg);
+    -webkit-transform: rotate(-180deg);
+}
+
+
+
+
+
+
+
 /* 大デバイス（デスクトップ, 992px以上） */
-@media (min-width: 992px) {}
+@media (min-width: 992px) {
+  img {
+    max-width: 100%;
+    width: 100%;
+  }
+}
 
 /* 中デバイス（タブレット, 992px 未満） */
-@media (max-width: 991.98px) {}
+@media (max-width: 991.98px) {
+  img {
+    max-width: 100%;
+    width: 100%;
+  }
+}
 
 /* 小デバイス（横向きモバイル, 768px 未満） */
-@media (max-width: 767.98px) {}
+@media (max-width: 767.98px) {
+  img {
+    max-width: 100%;
+    width: 100%;
+  }
+}
 
 /* 極小デバイス（縦向きモバイル, 576px 未満） */
-@media (max-width: 575.98px) {}
+@media (max-width: 575.98px) {
+  img {
+    max-width: 100%;
+    width: 100%;
+  }
+}
 
 /* IEハック */
 .col {
